README.rdoc correction

--- a/README.rdoc
+++ b/README.rdoc
@@ -12,24 +12,23 @@ features.
 
 1. Put 'gem wulin_master' to your Gemfile:
 
-   gem wulin_master
+    gem wulin_master
 
 2. Run bundler command to install the gem:
 
-   bundle install --path bundler
+    bundle install --path bundler
 
 3. After you install wulin_master gem, you need run the generator:
 
-   bundle exec rails g wulin_master:grid_states
+    bundle exec rails g wulin_master:grid_states
    
-  It will generator db/migrate/<timestamp>_create_grid_states.rb migrate file to your app,
-  "grid_states" table is used for store the grid states for each user.
+   It will generator <em>db/migrate/<timestamp>_create_grid_states.rb</em> migrate file to your app,
+   *_grid_states_* table is used for store the grid states for each user.
 
-  Run with <tt>bundle exec rails g</tt> for get generator list.
+   Run with <em>bundle exec rails g</em> for get generator list.
 
-4. Assume generator a new grid called 'grid_test', run the generator:
-
-   bundle exec rails g wulin_master:screen_and_grid grid_test name:string age:integer
+4. Assume generator a new grid called *grid_test*, run the generator:
+    bundle exec rails g wulin_master:screen_and_grid grid_test name:string age:integer
 
    This will create:
    
@@ -40,11 +39,12 @@ features.
     create  app/models/grid_test.rb
     route  resources :grid_tests
 
-   "name:string age:integer" are the columns of the grid, same as the "[field:type field:type]" 
-   option of 'scaffold' generator.
-   You can configre your gird in <tt>app/grids/grid_test_grid.rb</tt>:
+   <em>name:string age:integer</em> are the columns of the grid, same as the <b><em>[field:type field:type]</em></b> 
+   option of *scaffold* generator.
+   You can configre your gird:
 
-   class GridTestGrid < WulinMaster::GridConfig
+    # app/grids/grid_test_grid.rb
+    class GridTestGrid < WulinMaster::GridConfig
      config do
        title 'Grid test'
 
@@ -55,23 +55,23 @@ features.
        column :name
        column :age
      end
-   end
+    end
    
    Grid is located in one screen, one screen has one or a few grids,you can put any grid to one
-   screen with "grid" method, and config the 'title' and the 'path'.
-   app/screens/grid_test_screen.rb:
+   screen with *grid* method, and config the *title* and the *path* method.
    
-   class GridTestScreen < WulinMaster::Screen
+    # app/screens/grid_test_screen.rb
+    class GridTestScreen < WulinMaster::Screen
      title 'Grid test'
 
      path '/grid_tests'
 
      grid GridTestGrid
-   end
+    end
 
 5. Don't forget to run the db:migrate rake command:
 
-   bundle exec rake db:migrate
+    bundle exec rake db:migrate
 
 == Contributing
 
