--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-== Welcome to WulinMaster
+= WulinMaster
 
 WulinMaster is a grid plugin base on ruby on rails.It provide powerfull generator 
 and other tools to make grids easy to build,it also provides flexible configuration, 
